--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   },
   "scripts": {
     "start": "ts-node src/index.ts",
-    "typeorm": "typeorm-ts-node-commonjs"
+    "typeorm": "typeorm-ts-node-commonjs",
+    "migration:run": "npm run typeorm migration:run -- -d ./src/data-source.ts",
+    "migration:revert": "npm run typeorm -- -d ./src/data-source.ts migration:revert",
+    "migration:generate": "npm run typeorm -- -d ./src/data-source.ts migration:generate"
   }
 }
